--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,19 @@
-.projects{
-    
+.projects {
+  background: rgb(0, 0, 0);
+  background: -moz-linear-gradient(
+    10deg,
+    rgba(0, 0, 0, 1) 64%,
+    rgba(31, 29, 30, 1) 86%
+  );
+  background: -webkit-linear-gradient(
+    10deg,
+    rgba(0, 0, 0, 1) 64%,
+    rgba(31, 29, 30, 1) 86%
+  );
+  background: linear-gradient(
+    10deg,
+    rgba(0, 0, 0, 1) 64%,
+    rgba(31, 29, 30, 1) 86%
+  );
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#000000",endColorstr="#1f1d1e",GradientType=1);
 }
